<resources>
    <string name="app_name">ContractM</string>
    <string name="login_text">Log in</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="dash_board">Dashboard</string>
    <string name="contract">Contracts</string>
    <string name="template">Templates</string>
    <string name="event">Events</string>
    <string name="user">User</string>
    <string name="_26_new_messages">26 new \n messages</string>
    <string name="_11_active_contracts">11 active \n contracts</string>
    <string name="_12_pending_contract">12 pending \n contract</string>
    <string name="_13_new_reminders">13 new \n reminders</string>
    <string name="home">Sample house rental and agreement template specifying the following details.Contract details of both parties... </string>
    <string name="home_rental"><b>Home Rental</b></string>
    <string name="employee_contract"><b>Employee Contract</b></string>
    <string name="employee">Employment contract templates that state n clear and explcit terms the conditions of employemnt...</string>
    <string name="contaracter"><b>Contaracter</b></string>
    <string name="contracter_detail">a Contractor proposal template is a proposal written offer formally used by business who wish to close a deal..</string>
    <string name="market"><b>Marketing</b></string>
    <string name="market_detail">we have created a custimazable marketing agreement to help save you time while looking profesional when signing in new..</string>
    <string name="freelancer"><b>Freelancer</b></string>
    <string name="freelancer_detail">Use our free custimazable freelance invoice template to quickly create invoices for your freeleance work.issue invoice fast.</string>
    <string name="service"><b>Services</b></string>
    <string name="service_detail">you can use this templates to put your terms and agreement or service contract. this templates are user and printer friendly..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>

    <string-array name="pay_period">
        <item>Every week</item>
        <item>Every 15 day of Month</item>
        <item>Every month</item>
    </string-array>

    <string-array name="pay_method">
        <item>amole</item>
        <item>Hello cash</item>
        <item>pay pal</item>
    </string-array>


    <string name="welcome_1_title">Welcome</string>
    <string name="welcome_1_description">Find hundreds of formal contracts easily.</string>

    <string name="welcome_2_title">Favorite</string>
    <string name="welcome_2_description">Save your time by deals with few clicks.</string>

    <string name="welcome_3_title">Share</string>
    <string name="welcome_3_description">Get Your self a deal Wherever you are.</string>

    <string-array name="welcome_titles">
        <item>@string/welcome_1_title</item>
        <item>@string/welcome_2_title</item>
        <item>@string/welcome_3_title</item>
    </string-array>

    <string-array name="welcome_descriptions">
        <item>@string/welcome_1_description</item>
        <item>@string/welcome_2_description</item>
        <item>@string/welcome_3_description</item>
    </string-array>

    <string name="welcome_skip_button">Skip</string>
    <string name="first_name">First Name <font fgcolor='#FF0000'>*</font></string>
    <string name="llast_name">Last Name <font fgcolor='#FF0000'>*</font></string>
    <string name="lphone_no">Phone no</string>
    <string name="lemail">email <font fgcolor='#FF0000'>*</font></string>
    <string name="tenant_information">Tenant Information</string>
    <string name="tfirst_name">First Name <font fgcolor='#FF0000'>*</font></string>
    <string name="tlast_name">Last Name <font fgcolor='#FF0000'>*</font></string>
    <string name="tphone">Phone</string>
    <string name="temail">Email <font fgcolor='#FF0000'>*</font></string>
    <string name="rental_information">Rental Information</string>
    <string name="house_rental_address">House Rental Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal code</string>
    <string name="start_date_of_agreement">Start Date of agreement</string>
    <string name="end_date_of_agreement">End Date of agreement</string>
    <string name="pay_period">Pay Period <font fgcolor='#FF0000'>*</font></string>
    <string name="rental_amount_per_month">Rental amount per month</string>
    <string name="security_deposit">Security Deposit</string>
    <string name="late_charges">Late Charges</string>
    <string name="payment_method">Payment Method</string>
    <string name="collector">Collector</string>
    <string name="terms_and_conditions">TERMS AND CONDITIONS</string>
    <string name="insert_your_terms_and_conditions">insert your terms and conditions</string>
    <string name="landlord_signature">Landlord Signature</string>
    <string name="tenant_signature">Tenant Signature</string>
    <string name="submit">SUBMIT</string>
    <string name="update">UPDATE</string>
    <string name="print">PRINT</string>


</resources>