<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/dashboard"
            android:title="@string/dash_board" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/contract"
            android:title="@string/contract">


        </item>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/template"
            android:title="@string/template" />

        <item
            android:id="@+id/event"
            android:icon="@drawable/event"
            android:title="@string/event" />
        <item
            android:id="@+id/user"
            android:icon="@drawable/user"
            android:title="@string/user" />
    </group>
</menu>