<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ui.slideshow.SlideshowFragment"
    >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="Choose A Template"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <androidx.cardview.widget.CardView

            android:id="@+id/home_rental"
            android:layout_width="150dp"
            android:layout_height="200dp"

            >
            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/cardview_body"
                >
                <ImageView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/home"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_rental"

                    />

                <TextView

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textSize="12sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginLeft="10dp"
            android:layout_width="150dp"
            android:layout_height="200dp">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/cardview_body"
                >
                <ImageView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/employe"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_contract"

                    />

                <TextView

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/employee"
                    android:textSize="12sp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="200dp"

            >
            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/cardview_body"
                >
                <ImageView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/contracter"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contaracter"

                    />

                <TextView

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/contracter_detail"
                    android:textSize="12sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginLeft="10dp"
            android:layout_width="150dp"
            android:layout_height="200dp">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/cardview_body"
                >
                <ImageView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/market"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/market"

                    />

                <TextView

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/market_detail"
                    android:textSize="12sp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="200dp"

            >
            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/cardview_body"
                >
                <ImageView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/freeliance"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/freelancer"

                    />

                <TextView

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/freelancer_detail"
                    android:textSize="12sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginLeft="10dp"
            android:layout_width="150dp"
            android:layout_height="200dp">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/cardview_body"
                >
                <ImageView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/service"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service"

                    />

                <TextView

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/service_detail"
                    android:textSize="12sp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>
</LinearLayout>

</ScrollView>